--- a/render.yaml
+++ b/render.yaml
@@ -1,13 +1,11 @@
-#
-# Render Blueprint for Inbox Zero
-#
-# 1. Fork the Inbox Zero repository.
-# 2. Add this render.yaml file to the root of your fork.
-# 3. Go to https://dashboard.render.com/blueprints and create a new Blueprint.
-# 4. Connect your forked repository.
-# 5. Render will prompt you to fill in the secret environment variables.
-#
+# Defines the managed databases for the application
+databases:
+  - name: inbox-zero-db
+    plan: free # 'free' plan is fine for starting out
+    databaseName: inbox_zero_db # Optional: defines the initial database name inside Postgres
+    user: inbox_zero_user # Optional: defines the user
 
+# Defines the services (web app, redis, cron jobs)
 services:
   # -----------------
   # The main web application (Next.js)
@@ -35,9 +33,9 @@ services:
       - key: UPSTASH_REDIS_TOKEN
         value: from-render-url # The redis client parses the password from the URL
       - key: NEXTAUTH_URL
-        value: https://inbox-zero.onrender.com # IMPORTANT: Change if you rename the service
+        value: https://inbox-zero.onrender.com # IMPORTANT: Change this if you rename the service
       - key: NEXT_PUBLIC_APP_URL
-        value: https://inbox-zero.onrender.com # IMPORTANT: Change if you rename the service
+        value: https://inbox-zero.onrender.com # IMPORTANT: Change this if you rename the service
       # --- Secrets ---
       # You will be prompted to enter these values during blueprint setup.
       - key: GOOGLE_CLIENT_ID
@@ -60,13 +58,6 @@ services:
         value: openai # or anthropic, groq, etc.
       - key: ADMINS
         sync: false
-
-  # -----------------
-  # The PostgreSQL Database
-  # -----------------
-  - type: psql
-    name: inbox-zero-db
-    plan: free # 'free' plan is fine for starting out
 
   # -----------------
   # The Redis Instance
